# Rapidformat

./: .gitignore  CMakeLists.txt  README.md  keywords.txt
include/: MainFrame.h  Preferences.h  PreferencesFrame.h  ProgressDialog.h  RapidformatApp.h
src/: MainFrame.cpp  Preferences.cpp  PreferencesFrame.cpp  ProgressDialog.cpp  RapidformatApp.cpp  main.cpp
wxfb/: wxfb.cpp  wxfb.fbp  wxfb.h
